# pbar

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py  test_no_click.py
.github/workflows/: binaries.yml
scripts/: build_bin_linux  build_bin_macos  build_bin_windows
